[project]
name = "wedding-playlist"
version = "0.1.0"
description = "A Python application for managing and organizing wedding playlists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
wedding-playlist = "wedding_playlist.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
